@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Fri Dec 14 19:54:08 2001 -->
+<!-- Fri Dec 21 15:24:33 2001 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -131,20 +131,21 @@ Author
 If you decide to give TMDA a whirl, make sure you have the necessary
 prerequisite software installed first.<br><br>
 
-<li>The <a href="http://www.python.org/download/" TARGET="Resource Window">Python</a>
-programming language version 1.5.2 or higher.  Many UNIX/Linux
-distributions now come with Python pre-installed.  To check whether it
-is and what version you have installed, try typing <strong>python</strong> at
-your shell's command line:
+<li>The <a href="http://www.python.org/download/" TARGET="Resource Window">Python</a> 
+programming language.  Versions 1.5.2 and higher are supported, but 2.2 or higher is
+highly recommended.  Many UNIX/Linux distributions now come with
+Python pre-installed.  To check whether it is and what version you
+have installed, try typing <strong>python</strong> and/or
+<strong>python2</strong> at your shell's command line:
 
-<blockquote><pre>
-
+<blockquote>
+<pre>
 % python
-Python 2.1.1 (#1, Aug 30 2001, 03:48:58) [C] on osf1V5
-Type "copyright", "credits" or "license" for more information.
+Python 2.2 (#1, Dec 22 2001, 04:19:53) [C] on irix646
+Type "help", "copyright", "credits" or "license" for more information.
 >>> ^D
-
-</blockquote></pre>
+</pre>
+</blockquote>
 
 <li>An SMTP server (a.k.a. mail transport agent or MTA) for mail reception.
 Currently supported MTAs include 
