@@ -1,3 +1,7 @@
+2001-12-21  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* requirements.ht (Links): Recommend Python >= 2.2.
+
 2001-12-18  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* config-pre.ht (href): Modify Sendmail configuration
